broken css animations fix

--- a/css/master.css
+++ b/css/master.css
@@ -71,6 +71,9 @@ p, footer a {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
     margin-bottom: 1rem;
+    transition: 0.5s;
+    -ms-transition-duration: .3s;
+    -moz-transition-duration:.3s;
 }
 p strong {
     font-family: 'Montserrat', sans-serif;
@@ -174,10 +177,6 @@ header h3 a:hover {
   max-width: 100%;
 }
 
-
-
-
-
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -252,12 +251,6 @@ header h3 a:hover {
   transform: scale(1);
 }
 
-
-
-
-
-
-
 ul {
     display: flex;
     flex-direction: row;
@@ -270,38 +263,36 @@ ul {
     margin-right: 1rem;
     margin-left: 1rem;
 }
-.filtro li{
+.filtro a{
     margin-right: 1rem;
     margin-top: .5rem;
     font-family: 'Montserrat', sans-serif;
     font-size: .75rem;
-    line-height: 1rem;
     font-weight: 700;
     color: #808080;
-    /* border-bottom: 2px solid white; */
-    /* transition: 0.3s;
+    border-bottom: 2px solid white;
+    transition: 0.3s;
     -ms-transition-duration: .3s;
-    -moz-transition-duration:.3s; */
+    -moz-transition-duration:.3s;
+    -webkit-transform: 0.3s;
 }
 .filtro li:last-of-type{
     margin-right: 0;
 }
-.is-checked, .filtro li:hover, .is-checked:hover{
+
+.filtro a:hover{
   color: #E53247;
-  font-weight: 700;
-  /* border-bottom: 2px solid; */
-  line-height: 1rem;
-  /* transition: 0.3s;
+  border-bottom: 2px solid  #E53247;
+  transition: 0.3s;
   -ms-transition-duration: .3s;
   -moz-transition-duration:.3s;
   -webkit-transform: 0.3s;
-  -ms-transform: 0.3s; */
 }
 
-.is-checked {
+.filtro a.is-checked {
     color: #E53247;
     font-weight: 700;
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid #E53247;
 }
 
 footer {
